[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/menus/Load Game Menu.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/subpanel.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/theme/list_theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/Notalot60.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/img/copy.png" type="Texture" id=6]
[ext_resource path="res://scenes/nodes/Popup.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 17
extra_spacing_top = 2
extra_spacing_bottom = 1
extra_spacing_char = 2
extra_spacing_space = 5
font_data = ExtResource( 5 )

[node name="Root" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
back_scene_path = "res://scenes/menus/Main Menu.tscn"

[node name="Panel" type="Panel" parent="."]
margin_right = 824.0
margin_bottom = 400.0
theme = ExtResource( 1 )

[node name="Label" type="Label" parent="Panel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 126.0
margin_bottom = 53.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 1 )
text = "Load Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBack" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -112.0
margin_top = -58.0
margin_right = -20.0
margin_bottom = -20.0
size_flags_horizontal = 4
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLoad" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -232.0
margin_top = -58.0
margin_right = -137.0
margin_bottom = -20.0
size_flags_horizontal = 4
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDelete" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -352.0
margin_top = -58.0
margin_right = -257.0
margin_bottom = -20.0
size_flags_horizontal = 4
text = "Delete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 70.0
margin_right = -30.0
margin_bottom = -80.0
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/HBoxContainer"]
margin_right = 374.0
margin_bottom = 250.0
rect_min_size = Vector2( 300, 0 )
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/ScrollContainer"]
margin_right = 370.0
margin_bottom = 246.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Button" type="Button" parent="Panel/HBoxContainer/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 370.0
margin_bottom = 31.0
theme = ExtResource( 4 )
text = "My Factory"
align = 0

[node name="Button2" type="Button" parent="Panel/HBoxContainer/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 370.0
margin_bottom = 31.0
theme = ExtResource( 4 )
text = "My Factory"
align = 0

[node name="Button3" type="Button" parent="Panel/HBoxContainer/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 370.0
margin_bottom = 31.0
theme = ExtResource( 4 )
text = "My Factory"
align = 0

[node name="InfoPanel" type="Panel" parent="Panel/HBoxContainer"]
margin_left = 389.0
margin_right = 764.0
margin_bottom = 250.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 3 )

[node name="Name" type="Label" parent="Panel/HBoxContainer/InfoPanel"]
anchor_right = 1.0
margin_top = 20.0
margin_bottom = 34.0
text = "Select a savefile"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="VBoxContainer" parent="Panel/HBoxContainer/InfoPanel"]
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 50.0
margin_right = 0.5
margin_bottom = -20.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LastPlayed" type="Label" parent="Panel/HBoxContainer/InfoPanel/Labels"]
margin_top = 44.0
margin_right = 178.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "Last Played:"

[node name="TotalTime" type="Label" parent="Panel/HBoxContainer/InfoPanel/Labels"]
margin_top = 78.0
margin_right = 178.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 1 )
text = "Total time:"

[node name="Seed" type="Label" parent="Panel/HBoxContainer/InfoPanel/Labels"]
margin_top = 112.0
margin_right = 178.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 1 )
text = "Seed:"

[node name="Values" type="VBoxContainer" parent="Panel/HBoxContainer/InfoPanel"]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0
margin_right = -10.0
margin_bottom = -20.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LastPlayed" type="Label" parent="Panel/HBoxContainer/InfoPanel/Values"]
margin_top = 44.0
margin_right = 177.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "00:00 00-00-'00"
align = 2

[node name="TotalTime" type="Label" parent="Panel/HBoxContainer/InfoPanel/Values"]
margin_top = 78.0
margin_right = 177.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 1 )
text = "00h 00m"
align = 2

[node name="Seed" type="Label" parent="Panel/HBoxContainer/InfoPanel/Values"]
margin_top = 112.0
margin_right = 177.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 1 )
text = "0000000000    "
align = 2

[node name="Copy" type="Button" parent="Panel/HBoxContainer/InfoPanel/Values/Seed"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -19.0
margin_right = 5.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 6 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupDeleteSave" parent="." instance=ExtResource( 7 )]
text = "Are you sure?

You cannot recover a deleted  save"

[connection signal="pressed" from="Panel/ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="Panel/ButtonLoad" to="." method="_on_ButtonLoad_pressed"]
[connection signal="pressed" from="Panel/ButtonDelete" to="." method="_on_ButtonDelete_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/InfoPanel/Values/Seed/Copy" to="." method="_on_Copy_pressed"]
